# pad

./: .gitignore  .hgignore  .uss  Cargo.toml  INSTALL  LICENSE  README  README.hooks  README.md  README.plugins  env.sh  env.sh.template  install.sh  jsTestDriver.conf  run.sh  setup.sh
.github/workflows/: ci.yml  release-deb.yml  release.yml
contrib/: apache.conf  etherpad.spec  gravpad.user.js  nginx.conf  other-software.txt  robots.txt  scala.spec  step2.user.js
contrib/50x-error-handler/: 50x.html
contrib/cron/cron.d/: etherpad
contrib/scripts/: plugin_info.sql
crates/etherpad-client/: Cargo.toml  README.md
crates/etherpad-client/benches/: changeset.rs
crates/etherpad-client/src/: attrib_pool.rs  error.rs  lib.rs  ot.rs  presence.rs  reconnect.rs  session.rs  socket.rs
crates/etherpad-client/src/changeset/: mod.rs  parser.rs  serializer.rs
crates/etherpad-client/tests/: changeset_roundtrip.rs  changeset_unit.rs  conformance.rs  integration_clear_propagates.rs  integration_etherpad.rs  integration_roundtrip.rs  integration_serial_sends.rs  ot_apply.rs  ot_compose.rs  ot_follow.proptest-regressions  ot_follow.rs  ot_inverse.rs  send_changeset_author_attrib.rs  session_handshake.rs
crates/etherpad-client/tests/conformance/: README.md
crates/etherpad-client/tests/conformance/fixtures/: compose-two-inserts.json  delete-middle.json  insert-hello.json
crates/pad/: Cargo.toml
crates/pad/benches/: cold_open.rs
crates/pad/src/: app.rs  cli.rs  input.rs  keymap.rs  lib.rs  main.rs  panic_hook.rs  recover.rs
crates/pad/src/buffer/: clipboard.rs  line_endings.rs  mod.rs  search.rs  sidecar.rs  undo.rs
crates/pad/src/config/: mod.rs  paths.rs
crates/pad/src/share/: bridge.rs  collision.rs  inbound.rs  mod.rs  network.rs  osc52.rs  outbound.rs  qr.rs  scanner.rs  url_parse.rs
crates/pad/src/tui/: author_overlay.rs  editor_view.rs  help.rs  mod.rs  prompts.rs  sanitize.rs  share_overlay.rs  softwrap.rs  status_bar.rs
crates/pad/tests/: bidi_scenarios.rs  buffer_capture.rs  buffer_unit.rs  cli_args.rs  file_io.rs  keymap.rs  line_endings.rs  panic_hook.rs  pending_log.rs  perf_budget.rs  pty_smoke.rs  recover.rs  share_bridge.rs  share_inbound.rs  share_inbound_with_pending.rs  share_pty_against_remote.rs  share_pty_bidir.rs  share_pty_e2e.rs  share_pty_typing.rs  share_url_parse.rs  sidecar_meta.rs  snapshot.rs  wire_inspect.rs
crates/pad/wix/: main.wxs
debian/: README  README.Debian  changelog  config  control  copyright  etherpad.init  postinst  postrm  preinst  prerm  rules  templates
debian/po/: fi.po  fr.po  templates.pot
debian/source/: lintian-overrides
docs/superpowers/plans/: 2026-05-15-plan-1-etherpad-client.md  2026-05-15-plan-2-pad-v01-local-editor.md  2026-05-15-plan-3-pad-v02-share.md
docs/superpowers/specs/: 2026-05-12-pad-design.md
etherpad/: .gitignore  .hgignore  foo.txt  strace.out
etherpad/etc/: etherpad.local.properties.tmpl  etherpad.localdev-default.properties  etherpad.localdev-default.properties.in
etherpad/org/jfree/base/: jcommon.properties
etherpad/org/jfree/ui/: LocalizationBundle_pt_PT.properties
etherpad/src/: main.js
etherpad/src/etherpad/: globals.js  helpers.js  legacy_urls.js  licensing.js  log.js  quotas.js  sessions.js  utils.js
etherpad/src/etherpad/admin/: plugins.js  shell.js
etherpad/src/etherpad/billing/: billing.js  fields.js  team_billing.js
etherpad/src/etherpad/collab/: collab_server.js  genimg.js  readonly_server.js  server_utils.js
etherpad/src/etherpad/control/: aboutcontrol.js  admincontrol.js  blogcontrol.js  connection_diagnostics_control.js  global_pro_account_control.js  historycontrol.js  maincontrol.js  pne_manual_control.js  pro_beta_control.js  pro_help_control.js  pro_signup_control.js  scriptcontrol.js  static_control.js  statscontrol.js  testcontrol.js
etherpad/src/etherpad/db_migrations/: m0000_test.js  m0001_eepnet_signups_init.js  m0002_eepnet_signups_2.js  m0003_create_tests_table_v2.js  m0005_create_billing_tables.js  m0006_eepnet_signups_3.js  m0007_create_pro_tables_v4.js  m0008_persistent_vars.js  m0009_pad_tables.js  m0010_pad_sqlmeta.js  m0012_pro_users_auto_signin.js  (+20 more)
etherpad/src/static/: crossdomain.xml  crossdomain.xml.in
etherpad/src/templates/: 500_body.ejs
infrastructure/: .hgignore
infrastructure/ace/: .hgignore  debugRun  notes.txt  run
infrastructure/ace/www/: ace2_common_dev.js  ace2_inner.js  ace2_outer.js  ace2_wrapper.js  bbtree.js  colorutils.js  contentcollector.js  domline.js  easy_sync.js  easysync2.js  easysync2_tests.js  editor.css  inner.css  linestylefilter.js  magicdom.js  profiler.js  spanlist.js  syntax-new.css
infrastructure/com.etherpad/: licensing.scala
infrastructure/com.etherpad.openofficeservice/: importexport.scala
infrastructure/framework-src/: preamble.js
infrastructure/framework-src/modules/: dateutils.js  dispatch.js  ejs.js  exceptionutils.js  execution.js  fastJSON.js  faststatic.js  fileutils.js  funhtml.js  image.js  jsmin.js  sessions.js  varz.js
infrastructure/net.appjet.ajstdlib/: ajstdlib.scala  sqlbase.scala  streaming-client.js  streaming-iframe.html  streaming.scala  timer.scala
infrastructure/net.appjet.bodylock/: bodylock.scala
infrastructure/net.appjet.common.sars/: sars.scala
infrastructure/net.appjet.common/util/: BCrypt.java
infrastructure/net.appjet.oui/: FastJSON.scala  config.scala  execution.scala  files.scala  logging.scala  main.scala  servermodel.scala  stats.scala  util.scala
infrastructure/rhino1_7R1/: build-date
infrastructure/rhino1_7R1/javadoc/: allclasses-noframe.html  help-doc.html  index-all.html  index.html  overview-frame.html  package-list  serialized-form.html
redhat/: README  etherpad.init  etherpad.init-alt  etherpad.spec  etherpad.sysconfig
spike/: Cargo.toml  README.md
spike/src/: main.rs
trunk/: README
trunk/etherpad/etc/: etherpad.localdev-default.properties
trunk/etherpad/src/: main.js
trunk/infrastructure/ace/: README
trunk/infrastructure/net.appjet.ajstdlib/: sqlbase.scala
trunk/infrastructure/net.appjet.oui/: main.scala
(+809 files in other folders)
