[workspace]
resolver = "3"
members = [
    "crates/etherpad-client",
    "crates/pad",
    "spike",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/ether/etherpad-pad"
authors = ["John McLear <john@mclear.co.uk>"]

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
rust_socketio = { version = "0.6", features = ["async"] }
rustls = "0.23"
url = "2"
ratatui = "0.30"
crossterm = "0.29"
ropey = "1.6"
uuid = { version = "1", features = ["v7"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
