[workspace]
resolver = "3"
members = [
    "crates/etherpad-client",
    "crates/pad",
    "spike",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/ether/pad"
authors = ["John McLear <john@mclear.co.uk>"]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# Where to host releases
hosting = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "ether/homebrew-pad"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Checksums to generate for each App
checksum = "sha256"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
http = "1"
async-trait = "0.1"
rustls = "0.23"
url = "2"
ratatui = "0.30"
crossterm = "0.29"
ropey = "1.6"
uuid = { version = "1", features = ["v7"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
