[package]
name = "etherpad-client-spike"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies"] }
serde_json = { workspace = true }
url = { workspace = true }
anyhow = "1"
http = "1"
