[package]
name = "pad"
version = "0.1.0-dev"
description = "Nano-class terminal text editor with optional real-time collaboration backed by Etherpad."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "pad"

[lib]
name = "pad"
path = "src/lib.rs"

[[bin]]
name = "pad"
path = "src/main.rs"

[dependencies]
etherpad-client = { path = "../etherpad-client" }
tokio = { workspace = true }
futures-util = { workspace = true }
ratatui = { workspace = true }
crossterm = { version = "0.29", features = ["event-stream"] }
ropey = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
expectrl = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "cold_open"
harness = false
