[package]
name = "pad"
version = "0.1.0"
description = "Nano-class terminal text editor with optional real-time collaboration backed by Etherpad."
homepage = "https://github.com/ether/pad"
readme = "../../README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "pad"

[package.metadata.wix]
upgrade-guid = "0D8120F6-048C-4F4C-B279-75E9AB7C025B"
path-guid = "0651EB34-3453-4003-93C8-770ABAD6186E"
license = false
eula = false

# `cargo deb` builds the Debian/Ubuntu .deb package consumed by the
# release-deb.yml workflow. cargo-dist itself doesn't produce .deb —
# this metadata + the workflow layer it on top so `apt`-style users
# get a native install path. Architecture is set per-job to amd64 (we
# don't ship arm64 .deb yet; the aarch64 tar.xz covers ARM users).
[package.metadata.deb]
maintainer = "John McLear <john@mclear.co.uk>"
section = "editors"
priority = "optional"
extended-description = """
pad is a nano-class terminal text editor with optional real-time
collaboration backed by Etherpad. Edit local files like nano, or
join any Etherpad pad over the network and see other people's edits
land in your terminal as they type.
"""
assets = [
    ["target/release/pad", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/pad/", "644"],
    ["../../LICENSE", "usr/share/doc/pad/", "644"],
]

[lib]
name = "pad"
path = "src/lib.rs"

[[bin]]
name = "pad"
path = "src/main.rs"

[dependencies]
etherpad-client = { path = "../etherpad-client" }
tokio = { workspace = true }
futures-util = { workspace = true }
ratatui = { workspace = true }
crossterm = { version = "0.29", features = ["event-stream"] }
ropey = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
qrcode = "0.14"
reqwest = { workspace = true, features = ["json"] }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
expectrl = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "cold_open"
harness = false
